# pyroscope-python

./: .Dockerfile.swp  .gitignore  Dockerfile  LICENSE  Makefile  README.md  agent.c  build.py  example.py  example_FIXME.py  pyproject.toml  pyroscope.c  replace.py  setup.py  test.py  test.sh  test_wheel.py
.github/: setup.py
.github/workflows/: test.yml
pyroscope/: __init__.py  greeting.py
pyroscope_io/: __init__.py
tests/: test.py
