[tool.poetry]
name = "pyroscope_io"
version = "v0.2.4"
description = "API for pyroscope pyspy agent."
license = "Apache-2.0"
authors = ["Pyroscope Team"]
readme = "README.md"

[virtualenvs]
in-project = true

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.build]
script = "build.py"

[build-system]
requires = ["poetry>=1.1.5", "poetry-core>=1.0.3"]
build-backend = "poetry.masonry.api"
