[tool.poetry]
name = "pyroscope-io"
version = "v0.6.0"
description = "Pyroscope integration for Python"
license = "Apache-2.0"
authors = ["Pyroscope Team"]
readme = "README.md"
homepage = "https://pyroscope.io/"
documentation = "https://pyroscope.io/docs"
repository = "https://github.com/pyroscope-io/pyroscope-python"
include = ["agent.c"]
packages = [
  { include = "pyroscope_io" },
  { include = "pyroscope" },
]

[virtualenvs]
in-project = true

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/pyroscope-io/pyroscope-python/issues"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.build]
script = "build.py"

[build-system]
requires = ["setuptools", "wheel", "poetry>=1.1.10", "poetry-core>=1.0.3"]
build-backend = "poetry.masonry.api"
